# CocoRPy3

./: .gitignore  Coco.py  DriverGen.py  MANIFEST.in  PKG-INFO  ParserGen.py  README  pyproject.toml  setup.cfg  setupInfo.py
examples/: structs.atg  structs2.atg
examples/Calc/: Calc.atg
pimaker/: CocoR_Tester.py  makepi.how  pimaker.atg
sources/: Coco.atg  Coco.frame  Scanner.frame
src/CocoRPy3/: CharClass.py  Coco.py  CodeGenerator.py  Core.py  DriverGen.py  Errors.py  Parser.py  Scanner.py  Trace.py  __init__.py
src/CocoRPy3/documentation/: CocoDoc.htm
src/CocoRPy3/examples/: .Pascal.atg.swp  Clang2.atg
src/CocoRPy3/frames/: Driver.frame  Parser.frame
src/CocoRPy3/pimaker/: exampleTestSuite.py  fileTools.py  makepi.how  piBuilder.py  pimaker.frame
src/CocoRPy3/sources/: Coco.frame  Parser.frame
src/CocoRPy3/testSuite/: TestAlts_parserBaseline.py  TestAlts_scannerBaseline.py  TestAlts_traceBaseline.txt  TestAny1_parserBaseline.py  TestAny1_traceBaseline.txt  TestAny_parserBaseline.py  TestAny_traceBaseline.txt  TestCasing_parserBaseline.py  TestCasing_scannerBaseline.py  TestChars_parserBaseline.py  TestChars_scannerBaseline.py  TestComplete_traceBaseline.txt  TestDel_parserBaseline.py  TestEps_parserBaseline.py  TestEps_traceBaseline.txt  TestIters_parserBaseline.py  TestIters_traceBaseline.txt  TestLL1_parserBaseline.py  TestOpts1_parserBaseline.py  TestOpts_parserBaseline.py  TestOpts_traceBaseline.txt  TestReached_traceBaseline.txt  TestResOK_parserBaseline.py  TestSem_parserBaseline.py  TestSem_scannerBaseline.py  TestSync_parserBaseline.py  TestSync_traceBaseline.txt  TestTokens1_traceBaseline.txt  TestTokens_parserBaseline.py  TestTokens_scannerBaseline.py  TestWeak_parserBaseline.py  TestWeak_traceBaseline.txt  cocopTester.py
testSuite/: TestAlts_parserBaseline.py  TestAny1_parserBaseline.py  TestAny_parserBaseline.py  TestCasing_parserBaseline.py  TestCircular_traceBaseline.txt  TestComments_scannerBaseline.py  TestDel_parserBaseline.py  TestDel_traceBaseline.txt  TestIters_parserBaseline.py  TestLL1_scannerBaseline.py  TestLL1_traceBaseline.txt  TestOpts1_parserBaseline.py  TestOpts1_traceBaseline.txt  TestResOK_parserBaseline.py  TestResOK_scannerBaseline.py  TestSem_traceBaseline.txt  TestTerminalizable_traceBaseline.txt  TestTokens_parserBaseline.py  TestTokens_traceBaseline.txt
