[build-system]
requires = ["setuptools>=45","setuptools_scm[toml]>=6.2"]

[project]
name = "CocoRPy3"
dynamic = ["version"]
authors = [ 
  {name = "Hanspeter Mösseböck" },
  {name = "Markus Löberbauer" },
  {name = "Ronald H Longo", email = "ron_longo@verizon.net"} 
]
description = "Python implementation of the famous CoCo/R LL(k) compiler generator ported to Python."
license = {text = "GPL" }
classifiers = [     
	"Development Status :: 4 - Beta",
    "Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: Information Technology",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU General Public License (GPL)",
	"Natural Language :: English",
	"Programming Language :: Python",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Human Machine Interfaces",
	"Topic :: Scientific/Engineering :: Information Analysis",
	"Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
	"Topic :: Software Development :: Code Generators",
	"Topic :: Software Development :: Compilers",
	"Topic :: Software Development :: Interpreters",
	"Topic :: Software Development :: Pre-processors",
	"Topic :: System :: Shells",
	"Topic :: Text Processing :: General",
	"Topic :: Text Processing :: Linguistic"
]

[project.urls]
Homepage = "http://www.ssw.uni-linz.ac.at/coco"
Repository = "https://github.com/hb9chm/CocoRPy3"
OriginalRepository = "https://sourceforge.net/projects/cocorforpython/"


[project.scripts]
coco = "CocoRPy3:run_coco"

[tool.setuptools_scm]
write_to = "src/CocoRPy3/_version.py"

