[metadata]
name = CocoRPy3
version = 3.0.1
author = Ronald H Longo
author_email = ron_longo@verizon.net
description = Python implementation of the famous CoCo/R LL(k) compiler generator ported to Python.
long_description = file: README
long_description_content_type = text
url = https://github.com/hb9chm/CocoRPy3
project_urls = 
	CocoR Home = http://www.ssw.uni-linz.ac.at/coco
	CocoRPy 27 = https://sourceforge.net/projects/cocorforpython/
platforms = Python 3, Windows, Unix
license = GPL
classifiers =      
	Development Status :: 4 - Beta,
    Environment :: Console,
	Intended Audience :: Developers,
	Intended Audience :: Education,
	Intended Audience :: Information Technology,
	Intended Audience :: Science/Research,
	License :: OSI Approved :: GNU General Public License (GPL),
	Natural Language :: English,
	Programming Language :: Python,
	Topic :: Scientific/Engineering,
	Topic :: Scientific/Engineering :: Human Machine Interfaces,
	Topic :: Scientific/Engineering :: Information Analysis,
	Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator,
	Topic :: Software Development :: Code Generators,
	Topic :: Software Development :: Compilers,
	Topic :: Software Development :: Interpreters,
	Topic :: Software Development :: Pre-processors,
	Topic :: System :: Shells,
	Topic :: Text Processing :: General,
	Topic :: Text Processing :: Linguistic

[options]
package_dir = 
	= src
packages = CocoRPy3
python_requies = >= 3.7
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    coco = CocoRPy3:run_coco